# Weaviate-demo

./: .flake8  .gitignore  README.md  main.py  pyproject.toml
data/raw/: newspaper_news.pkl
docs/: api.rest  api_calls.rest
notebooks/: 1.EDA.ipynb  2.data_preprocessing.ipynb  3.weaviate_search_examples.ipynb  EDA.ipynb  EDA_backup.ipynb  EDA_topic_modeling.ipynb  alerts_test.ipynb  search_examples.ipynb  weaviate_search_examples.ipynb
src/: __init__.py
src/config/: config.yaml
src/data/: (to_delete)_load_data.py  README.md  __init__.py  data_loader.py  download_20newsgroup.sh  load_data.py  parse_websites.py
src/docker/: docker-compose.yml
src/docker/weaviate/: docker-compose-vectorizer.yml  docker-compose-vectorizer_sbert.yml  docker-compose-vectorizer_spacy.yml  docker-compose.yml
src/features/: make_features.py  vectorezer_sbert.py  vectorization.py
src/models/: README.md
src/models/weaviate/: (to_delete)_schema.py  adding_schemas.py  data_import.py  schema.json  schema.py  schema_vectorizer.json  schemas.py  search.py
src/utils/: __init__.py  helper_utils.py  search.py  weaviate_stats.py  weaviate_utils.py
